Fix number constructor call with primitive argument
It may be more efficient to use the static method valueOf() here
(introduced in Java 5), which will cache objects for values between -128
and 127 inclusive